--- a/React_Store/React_Store/package.json
+++ b/React_Store/React_Store/package.json
@@ -16,7 +16,8 @@
     "react-helmet": "^6.1.0",
     "react-intersection-observer": "^9.5.3",
     "react-router-dom": "^6.21.2",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "router": "^1.3.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
