--- a/React_Store/React_Store/package.json
+++ b/React_Store/React_Store/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.5.3",
     "react-router-dom": "^6.21.2",
     "react-scroll": "^1.9.0",
